--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -31,7 +31,7 @@
     background-image: url(../../img/index-background-desktop-cat.png);
     background-repeat: no-repeat;
     background-position: 100% 0;
-    background-size: 50% auto;
+    background-size: auto 731px;
 
     @media (min-resolution: 2dppx) {
       background-image: url(../../img/index-background-desktop-cat@2x.png);
