--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,9 +1,7 @@
 .promo {
   color: $basic_white;
 
-  border-color: $basic_green;
-  background-repeat: no-repeat;
-  background-position: top center;
+  background: center 0 no-repeat url(../../img/index-background-mobile-cat.png), linear-gradient(to bottom, #65a73c 302px, $basic-white 302px);
 }
 
 .promo__wrapper {
@@ -110,7 +108,7 @@
 
 @media (min-width: $desktop-width) {
   .promo {
-    background: linear-gradient(90deg, rgba(255, 255, 255, 1) 50%, rgba(104, 183, 56, 0.85) 50%);
+    background: linear-gradient(to right, #fff 49%, #65a73c 49%, #65a73c 70%, transparent 75%);
   }
 
   .promo__wrapper {
