--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -20,6 +20,8 @@
 }
 
 .form__input-item {
+  position: relative;
+
   display: grid;
   grid-template-columns: max-content auto;
 
@@ -38,14 +40,62 @@
 }
 
 .form__input-text {
-  font-size: transparent;
-  line-height: transparent;
+  position: relative;
+
+  font-size: 16px;
+  line-height: 18px;
   text-transform: uppercase;
+  color: $special_dark-grey;
 
   padding-left: 14px;
   padding-right: 14px;
   padding-bottom: 13px;
   padding-top: 13px;
+
+  border: 1px solid #E7E7E7;
+
+  &:hover {
+    border: 1px solid #CDCDCD;
+  }
+
+  &:focus {
+    outline: none;
+
+    border: 2px solid #444444;
+  }
+
+  &--error {
+    border: 2px solid #FF8282;
+  }
+}
+
+.form__input-text--icon {
+  background-repeat: no-repeat;
+  background-position: 95% 50%;
+
+  &-email {
+    background-image: url(../../img/icon_email.svg);
+
+    &-error {
+      background-image: url(../../img/icon_email--error.svg);
+    }
+
+    &:focus {
+      background-image: url(../../img/icon_email--focus.svg);
+    }
+  }
+
+  &-phone {
+    background-image: url(../../img/icon_phone.svg);
+
+    &-error {
+      background-image: url(../../img/icon_phone--error.svg);
+    }
+
+    &:focus {
+      background-image: url(../../img/icon_phone--focus.svg);
+    }
+  }
 }
 
 .form__list-radio {
@@ -90,6 +140,10 @@
 
     border: 1px solid #CDCDCD;
     border-radius: 50%;
+  }
+
+  &+.form__input-radio-label:hover::before {
+    border: 1px solid #BABABA;
   }
 
   &:checked+.form__input-radio-label::after {
@@ -140,11 +194,6 @@
 }
 
 .form__input-textarea {
-  font-size: 16px;
-  line-height: 18px;
-  text-transform: uppercase;
-  color: $special_dark-grey;
-
   padding: 0;
   padding-top: 5px;
   padding-left: 10px;
@@ -154,8 +203,6 @@
 
   width: 100%;
   min-height: 150px;
-
-  border: 1px solid #E7E7E7;
 
   resize: none;
 }
@@ -204,7 +251,10 @@
     height: 26px;
 
     border: 1px solid #CDCDCD;
-    ;
+  }
+
+  &+.form__input-checkbox-label:hover::before {
+    border: 1px solid #BABABA;
   }
 
   &:checked+.form__input-checkbox-label::after {
@@ -295,6 +345,8 @@
     line-height: 36px;
 
     padding-left: 40px;
+
+    margin-bottom: 70px;
   }
 
   .form__title-contacts {
@@ -334,6 +386,10 @@
 }
 
 @media (min-width: $desktop-width) {
+  .form__wrapper {
+    margin-bottom: 65px;
+  }
+
   .form__wrapper-info {
     display: grid;
     grid-template-columns: 570px 570px;
@@ -343,6 +399,10 @@
 
   .form__title {
     margin-left: -40px;
+  }
+
+  .form__input-list-contacts .form__input-item {
+    margin: 0;
   }
 
   .form__input-text {
@@ -361,6 +421,8 @@
   .form__list-radio {
     grid-row: 1 / 3;
     grid-column: 2;
+
+    padding: 27px;
   }
 
   .form__input-textarea-wrapper {
