--- a/source/sass/blocks/info.scss
+++ b/source/sass/blocks/info.scss
@@ -1,3 +1,7 @@
+.info {
+  background-color: $basic-grey;
+}
+
 .info__main {
   background-color: $basic_white;
 }
@@ -6,8 +10,11 @@
   display: flex;
   justify-content: space-between;
 
-  padding-top: 25px;
-  padding-bottom: 25px;
+  min-height: 115px;
+
+  padding-right: 20px;
+  padding-left: 20px;
+  margin: 0 auto;
 }
 
 .info__text {
@@ -18,6 +25,8 @@
   text-transform: uppercase;
 
   margin: 0;
+
+  align-self: center;
 }
 
 .info__adress {
@@ -25,6 +34,12 @@
   line-height: 20px;
 
   margin: 0;
+
+  align-self: center;
+}
+
+.info__map {
+  height: 362px;
 }
 
 @media (min-width: $tablet-width) {
@@ -39,5 +54,15 @@
 
   .info__adress {
     font-size: 16px;
+  }
+
+  .info__map {
+    height: 400px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .info__wrapper {
+    display: none;
   }
 }
