--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -55,6 +55,22 @@
 
     margin-right: 30px;
 
+    position: relative;
+
+    &--current::before {
+      content: "";
+
+      position: absolute;
+
+      bottom: 0;
+      right: 0;
+
+      width: 100%;
+      height: 2px;
+
+      background-color: $basic_green;
+    }
+
     &:last-child {
       margin-right: 0;
     }
@@ -69,5 +85,19 @@
 
     padding-bottom: 10px;
     padding-top: 10px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .main-nav__item {
+
+    &--current-main::before {
+      background-color: $basic-white;
+    }
+  }
+
+  .main-nav__link {
+    font-size: 20px;
+    line-height: 30px;
   }
 }
